edit compare texts

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         <div class="nav-links">
             <a href="/">Главная</a>
             <a href="/help">Помощь</a>
-            <a href="/find_author">Определение автора</a>
+            <a href="/compare_texts">Сравнение авторства</a>
         </div>
     </div>
     <div class="container">
