--- a/templates/find_author.html
+++ b/templates/find_author.html
@@ -13,13 +13,13 @@
         <p>Результаты поиска:</p>
         {% for key, value in result.items() %}
             {% if value[0] > 2 %}
-                <p class="result_ok">{{key}} - {{value[0] * 25}} % - {{value[1]}}</p>
+                <p class="result_ok">{{key}} - {{value[1]}}</p>
             {% endif %}
             {% if value[0] < 2 %}
-                <p class="result_no">{{key}} - {{value[0] * 25}} % - {{value[1]}}</p>
+                <p class="result_no">{{key}} - {{value[1]}}</p>
             {% endif %}
             {% if value[0] == 2 %}
-                <p class="result_mb">{{key}} - {{value[0] * 25}} % - {{value[1]}}</p>
+                <p class="result_mb">{{key}} - {{value[1]}}</p>
             {% endif %}
         {% endfor %}
     </div>
